--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <nav class="navbar navbar-dark bg-transparenet">
                 <a class="navbar-brand" href="#">
-                    <h4>The ML Academy</h4>
+                    <h4>Tensorz</h4>
                 </a>
                 <span class="navbar-text ml-auto d-none d-sm-inline-block">+92-331-6667655 </span>
                 <span class="navbar-text d-none d-sm-inline-block">saadashraft@gmail.com</span>
