--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>The ML Academy</title>
+    <title>Tensorz</title>
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
         <div class="container">
             <nav class="navbar navbar-dark bg-transparenet">
                 <a class="navbar-brand" href="#">
-                    <h4>Tensorz</h4>
+                    <h3>Tensorz</h3>
                 </a>
                 <span class="navbar-text ml-auto d-none d-sm-inline-block">+92-331-6667655 </span>
                 <span class="navbar-text d-none d-sm-inline-block">saadashraft@gmail.com</span>
