--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   </head>
   <body>
     <div class="frame">
-      <div class="div">
-        <div class="text-wrapper">tensorz</div>
-        <p class="p">something exciting is on the horizon</p>
+      <div class="frame-wrapper">
+        <div class="div">
+          <div class="text-wrapper">tensorz</div>
+          <p class="p">something exciting is on the horizon</p>
+        </div>
       </div>
     </div>
   </body>
